<resources>
    <string name="app_name">Zadanie</string>
    <string name="prompt_email">Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_login">Login</string>
    <string name="login_failed">"Login failed"</string>
    <string name="action_sign_up">Sign up </string>
    <string name="login_sign_up">"Sign up failed"</string>
    <string name="or_log_in">or log in</string>
    <string name="or_create_account">or create account.</string>
    <string name="bars">Bars</string>
    <string name="log_out">Log out</string>
    <string name="repeat_password">Repeat password</string>
    <string name="back">back</string>
    <string name="zobrazit_na_mape">Zobrazit na mape</string>

    <string name="pub_detail_title">Pub detail</string>

    <string name="friends_title">Friends</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="add_friend_title">Add friend</string>
    <string name="add_friend_prompt">Friend\'s name</string>
    <string name="add_friend_submit">Submit</string>

    <string name="bottom_nav_bars">Bars</string>
    <string name="bottom_nav_friends">Friends</string>

    <string name="locate_title">Check in</string>

</resources>